@@ -53,6 +53,7 @@ no_categories_for_chooser "No Sites are defined.  You must add a Site before you
   category_has_url              "Duplicate URL$s detected. Your choices generate the exact URL$s of Category $ids ($urls). Please change your settings for $attributes."
   category_has_url_on_add_cat   "Duplicate URL detected. Adding your slug to $cat would generate the exact URL of Category $id ($url)"
   duplicate_url                 "Duplicate URL detected. Your choices for $attributes conflict with another Story's URL:"
+  reserved_url                  "We're sorry, but $reserved is a reserved URL and can't be used for stories."
   duplicate_urls                "Duplicate URLs detected. Your choices for $attributes conflict with URLs of other Stories:"
   duplicate_url_on_add_cat      "Duplicate URL detected. Adding Category $cat would conflict with another Story's URL:"
   duplicate_url_table           "<center> <table border=1 style='text-align:center'> <tr> <td>Story ID</td> <td>URL (click to view)</td> </tr> $dupe_rows <tr> <td><input type='button' value='Cancel' onclick='Krang.Messages.hide($qalerts$q)'></td> <td><input type='submit' value='Delete & Replace With Your Story' onclick='if (confirm($q Are you SURE? Deleting a story also severs any links to it. $q)) { Krang.Messages.hide($qalerts$q); Krang.Form.submit($q$form$q, { rm: $qreplace_dupes$q }, { to_top: false })}'></td> </tr> </table> <br><br>"
@@ -336,6 +337,7 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   missing_dir               "Directory requires a value."
   bad_dir                   "Directory name must contain only letters, numbers, underscores and dashes.  No spaces or other special characters are allowed."
   duplicate_url             "Duplicate URL detected.  Category $category_id has the URL $url which is the same as your choices generate.  Please change your settings for parent or directory to generate a new URL."
+  reserved_url              "We're sorry, but $reserved is a reserved URL and can't be used for categories."
   story_has_category_url    "Story $id has the exact URL of your new Category; it has been converted into a Category Index."
   uneditable_story_has_url  "Story $id has the exact URL that your choices generate, and cannot be converted into a Category Index because you don't have the necessary permissions to edit it."
   story_had_category_url    "Story $id has been turned into a category index, because it had the same URL as the just created Category $cat_id."
